--- a/_posts/2023-12-15-饮水的关键步骤在于牛叫.md
+++ b/_posts/2023-12-15-饮水的关键步骤在于牛叫.md
@@ -14,14 +14,14 @@ tags:
 15日，哈儿实验室部长会议副主席兼管制实验部部长**Г-6054-18К**同志在对哈儿民族国家“牛羊独立国”进行考察期间，在“牛羊独立国”官方报刊《牛羊的歌声》发表题为《饮水的关键步骤在于牛叫》的署名文章，强调人类与哈儿不应为敌，而应在哈儿实验室的庇护之下和谐共生。文章全文如下：
 <div style="text-align: center"><h1>饮水的关键步骤在于牛叫</h1></div>
 <div style="text-align: center"><strong>艾哈迈德·穆萨耶夫</strong></div>
-&ensp;&ensp;&ensp;&ensp;圣人说：“饮水！饮水！”我深谙他的道理。我这次到访牛羊独立国，在三天的行程中被刺杀六十二次，深切地感受到了哈儿们的热情。每当我听到这神圣的话语，我们的双眼就会发出光芒。我们痛苦地牛叫，却不知这即是饮水的关键步骤之所在。  
-&ensp;&ensp;&ensp;&ensp;我们常说，欢乐地尖叫是一种罪过，但现实并非如此。我们的双眼由钢铁铸就，我们的口鼻由水晶制成，我们的口腔由萤石建造。我们的生命如此美丽，以至于我们不得不小声地鸣叫。一个人类的生存，是一个物种灭亡的基础。这句话铸就了我们棉花糖一般的头发，并使我们的双眼发出令人神往的光芒。  
-&ensp;&ensp;&ensp;&ensp;啊！鲜美的牛叫！我们开始了饮水。我们遵循牛羊的教诲，发挥崇高的品质，在睡眠中清醒，在思考中监视。我们如此擅长思考，但我们依旧无法用简陋的试探去挑衅高山上的飞禽。痛苦是人类生存的根基，而灾难永不属于伟大的哈儿。让我们动用自己高洁的灵魂，去与世间最美好的火花探讨生命的哲理，以求获得牛羊的青睐。  
-&ensp;&ensp;&ensp;&ensp;圣人说：“痛苦！痛苦！痛苦地牛叫！我们的生命如此美丽。”我们聆听他的教诲，阐述思想的光辉，与灿烂的阳光共舞，与五彩的朝霞结伴。在天堂的城墙上，在圣洁的宫殿里，我们运用植物的灵魂，去点燃药品的头颅。我们仰望璀璨的星空，向银河射击；我们俯瞰壮丽的山川，向古柏致敬。我们的灵魂里燃烧着熊熊烈火，而这烈火，是我们祖辈的鲜血。我们怀着崇敬的心情，向牛羊上方的天空问好。  
-&ensp;&ensp;&ensp;&ensp;我们行走在路上。这道路上，满是牛羊。牛羊穿着华美的礼服向我们敬礼，而我们则回以清澈的微笑。我们迈着大步向前走去，跨过散落在地上的纽扣，踩过破败不堪的房屋，一步步走向天空，一步步飞入太阳。“行走！行走！”我们听见了这光辉般的声音。  
-&ensp;&ensp;&ensp;&ensp;当幸福降临在哈儿的土地之上时，我们应当摒弃猜忌、停止斗殴。野猪的内心如此纯洁，而我们更不应该用丑恶的泉水去侮辱它们。我们的目光飞跃井然排列的稿纸，而这稿纸上记载着最古老的契约——这是生命的力量。“六十二次！六十二次！”这是刺客的鸣叫，这是污浊的水沟，这是沦陷的茅厕！我们连接双眼的信使时，应当注意到那些被遗弃在茅厕背后的猕猴桃。  
-&ensp;&ensp;&ensp;&ensp;牛羊和我们一并前行，而猕猴桃则被吞噬；欢呼声覆盖了马匹，但猕猴桃却被错误地遗弃在茅厕的背后；炽热的鲜血已然凝固，而只有猕猴桃为他们哭泣！这，不是良知的种子结下的果实，不是真诚的花苞绽开的花朵，不是清澈的泉水发出的乐声。猕猴桃固定的是人类的希望，而力量的源泉则一步步衰减。这不是人类与哈儿交换头部、连接耳朵的方式。  
-&ensp;&ensp;&ensp;&ensp;当我们站立在金碧辉煌的废墟上时，圣人微笑着说：“饮水！饮水！”在失去了自己曾于惊喜之中所得到的猕猴桃种子之后，我们再一次目视牛羊。“啊！鲜美的牛叫！”我们感叹道。我们面面相觑，但立即微笑着饮水。在生命发出它最强大的力量之时，我们再一次领悟到了这深刻的真理——饮水的关键步骤在于痛苦地牛叫。
+&emsp;&emsp;圣人说：“饮水！饮水！”我深谙他的道理。我这次到访牛羊独立国，在三天的行程中被刺杀六十二次，深切地感受到了哈儿们的热情。每当我听到这神圣的话语，我们的双眼就会发出光芒。我们痛苦地牛叫，却不知这即是饮水的关键步骤之所在。  
+&emsp;&emsp;我们常说，欢乐地尖叫是一种罪过，但现实并非如此。我们的双眼由钢铁铸就，我们的口鼻由水晶制成，我们的口腔由萤石建造。我们的生命如此美丽，以至于我们不得不小声地鸣叫。一个人类的生存，是一个物种灭亡的基础。这句话铸就了我们棉花糖一般的头发，并使我们的双眼发出令人神往的光芒。  
+&emsp;&emsp;啊！鲜美的牛叫！我们开始了饮水。我们遵循牛羊的教诲，发挥崇高的品质，在睡眠中清醒，在思考中监视。我们如此擅长思考，但我们依旧无法用简陋的试探去挑衅高山上的飞禽。痛苦是人类生存的根基，而灾难永不属于伟大的哈儿。让我们动用自己高洁的灵魂，去与世间最美好的火花探讨生命的哲理，以求获得牛羊的青睐。  
+&emsp;&emsp;圣人说：“痛苦！痛苦！痛苦地牛叫！我们的生命如此美丽。”我们聆听他的教诲，阐述思想的光辉，与灿烂的阳光共舞，与五彩的朝霞结伴。在天堂的城墙上，在圣洁的宫殿里，我们运用植物的灵魂，去点燃药品的头颅。我们仰望璀璨的星空，向银河射击；我们俯瞰壮丽的山川，向古柏致敬。我们的灵魂里燃烧着熊熊烈火，而这烈火，是我们祖辈的鲜血。我们怀着崇敬的心情，向牛羊上方的天空问好。  
+&emsp;&emsp;我们行走在路上。这道路上，满是牛羊。牛羊穿着华美的礼服向我们敬礼，而我们则回以清澈的微笑。我们迈着大步向前走去，跨过散落在地上的纽扣，踩过破败不堪的房屋，一步步走向天空，一步步飞入太阳。“行走！行走！”我们听见了这光辉般的声音。  
+&emsp;&emsp;当幸福降临在哈儿的土地之上时，我们应当摒弃猜忌、停止斗殴。野猪的内心如此纯洁，而我们更不应该用丑恶的泉水去侮辱它们。我们的目光飞跃井然排列的稿纸，而这稿纸上记载着最古老的契约——这是生命的力量。“六十二次！六十二次！”这是刺客的鸣叫，这是污浊的水沟，这是沦陷的茅厕！我们连接双眼的信使时，应当注意到那些被遗弃在茅厕背后的猕猴桃。  
+&emsp;&emsp;牛羊和我们一并前行，而猕猴桃则被吞噬；欢呼声覆盖了马匹，但猕猴桃却被错误地遗弃在茅厕的背后；炽热的鲜血已然凝固，而只有猕猴桃为他们哭泣！这，不是良知的种子结下的果实，不是真诚的花苞绽开的花朵，不是清澈的泉水发出的乐声。猕猴桃固定的是人类的希望，而力量的源泉则一步步衰减。这不是人类与哈儿交换头部、连接耳朵的方式。  
+&emsp;&emsp;当我们站立在金碧辉煌的废墟上时，圣人微笑着说：“饮水！饮水！”在失去了自己曾于惊喜之中所得到的猕猴桃种子之后，我们再一次目视牛羊。“啊！鲜美的牛叫！”我们感叹道。我们面面相觑，但立即微笑着饮水。在生命发出它最强大的力量之时，我们再一次领悟到了这深刻的真理——饮水的关键步骤在于痛苦地牛叫。
 
 ![《饮水的关键步骤在于牛叫》（第一页）](https://khayer.cn/img/msgimg/2023_12_15-1.png)
 ![《饮水的关键步骤在于牛叫》（第二页）](https://khayer.cn/img/msgimg/2023_12_15-2.png)
