--- a/_posts/2023-12-30-哈儿实验室人事调动.md
+++ b/_posts/2023-12-30-哈儿实验室人事调动.md
@@ -11,6 +11,6 @@ tags:
   - 消息
 ---
 
-30日，哈儿实验室部长会议主席**Л-1917-11С**同志签署命令，决定进行人事任免。  
-命令决定，任命**Ф-9844-35Х**同志为管制实验部副部长；任命**А-0598-85Б**同志为管制实验部候补副部长。
+&emsp;&emsp;30日，哈儿实验室部长会议主席**Л-1917-11С**同志签署命令，决定进行人事任免。  
+&emsp;&emsp;命令决定，任命**Ф-9844-35Х**同志为管制实验部副部长；任命**А-0598-85Б**同志为管制实验部候补副部长。
 <div style="text-align: right">（来自：《真理》2023年12月30日）</div>
