--- a/_posts/2024/2024-01-05-哈儿实验室内务部召开全体会议.md
+++ b/_posts/2024/2024-01-05-哈儿实验室内务部召开全体会议.md
@@ -5,7 +5,7 @@ subtitle:   "Министерство внутренних дел Лаборат
 date:       2024-01-05 21:30:00
 author:     "哈儿实验室内务部"
 catalog: false
-header-img: "img/sssr34.jpg"
+header-img: "img/home-bg-art.jpg"
 header-mask: 0
 tags:
   - 消息
