--- a/_posts/2024/2024-03-05-哈儿实验室部长会议通知.md
+++ b/_posts/2024/2024-03-05-哈儿实验室部长会议通知.md
@@ -17,7 +17,7 @@ tags:
 &emsp;&emsp;二、哈儿实验室部长会议主席**Л-1917-11С**同志3月5日签署命令，决定进行人事任免。命令决定，免去**В-1047-74А**同志的社会行政部副部长职务。  
 &emsp;&emsp;三、哈儿实验室部长会议主席团3月4日召开全体会议，通过关于部长会议个别部长的任免案草案，并决定将其提交至哈儿实验室最高苏维埃主席团以供审议。
 
-<div style="text-align: right">哈儿实验室部长会议</strong></div>
+<div style="text-align: right">哈儿实验室部长会议</div>
 <div style="text-align: right">2024年3月5日</div>
 
 <div style="text-align: right">（来自：《真理》2024年3月5日）</div>
