--- a/_posts/2024/2024-03-16-被哈儿追杀怎么办？教你四招解决.md
+++ b/_posts/2024/2024-03-16-被哈儿追杀怎么办？教你四招解决.md
@@ -30,14 +30,14 @@ tags:
 * **“树木！树木！您的光辉使我陷入欢愉的癫狂！”**
 &emsp;&emsp;如果前三个口令均无效，可以尝试该口令。据统计，在接受过哈儿实验室教育的普通哈儿实施的哈人事件中，使用此口令有59.4%的概率使之停止哈人。
 
-### 二、被动行为刺激法
+### 二、静止法
 
-&emsp;&emsp;在口令法无效的情况下，可以尝试被动行为刺激法。这种方法通常适用于哈儿综合能力值低于-50的哈儿。该方法的关键在于尽可能保持绝对静止，并抑制呼吸时胸腔的扩张和收缩。通常，在保持静止超过2秒后，哈儿将停止哈人。对于哈儿综合能力值较高的哈儿而言，该方法可能无效。因此，尝试该方法时必须与哈儿保持200米以上的距离。  
+&emsp;&emsp;在口令法无效的情况下，可以尝试静止法。这种方法通常适用于哈儿综合能力值低于-50的哈儿。该方法的关键在于尽可能保持绝对静止，并抑制呼吸时胸腔的扩张和收缩。通常，在保持静止超过2秒后，哈儿将停止哈人。对于哈儿综合能力值较高的哈儿而言，该方法可能无效。因此，尝试该方法时必须与哈儿保持200米以上的距离。  
 &emsp;&emsp;需要指出的是，该方法难度较大、成功率较低，**在特别紧急的情况下不宜优先使用**。
 
-### 三、主动行为刺激法
+### 三、捣毁法
 
-&emsp;&emsp;主动行为刺激法通常用于人形特征明显、体积较小、行动能力较弱、不采用分裂的方式增殖的哈儿。该方法的关键步骤在于使用坚硬的棍状物刺入哈儿的枕骨大孔并搅拌。使用该方法后，实施哈人行为的哈儿将失去生命，但在紧急情况下，这种行为受到哈儿实验室保护。  
+&emsp;&emsp;捣毁法通常用于人形特征明显、体积较小、行动能力较弱、不采用分裂的方式增殖的哈儿。该方法的关键步骤在于使用坚硬的棍状物刺入哈儿的枕骨大孔并捣毁内部的组织。使用该方法后，实施哈人行为的哈儿将失去生命，但在紧急情况下，这种行为受到哈儿实验室保护。  
 &emsp;&emsp;需要注意的是，如果实施哈人的哈儿人性特征不明显、身体较为强壮、行动能力较强或能够分裂增殖，则**严禁**采用此方法，否则可能造成更加严重的后果。
 
 ### 四、“医用武器”法
