--- a/_posts/2024/2024-04-26-РУДВ现象观测报告.md
+++ b/_posts/2024/2024-04-26-РУДВ现象观测报告.md
@@ -29,10 +29,10 @@ tags:
 <table style="text-align: center;">
   <thead>
     <tr>
-      <th>起始时间</th>
-      <th>终止时间</th>
-      <th>时长</th>
-      <th>备注</th>
+      <th style="text-align: center;">起始时间</th>
+      <th style="text-align: center;">终止时间</th>
+      <th style="text-align: center;">时长</th>
+      <th style="text-align: center;">备注</th>
     </tr>
   </thead>
   <tbody>
@@ -157,10 +157,10 @@ tags:
 <table style="text-align: center;">
   <thead>
     <tr>
-      <th>起始时间</th>
-      <th>终止时间</th>
-      <th>时长</th>
-      <th>备注</th>
+      <th style="text-align: center;">起始时间</th>
+      <th style="text-align: center;">终止时间</th>
+      <th style="text-align: center;">时长</th>
+      <th style="text-align: center;">备注</th>
     </tr>
   </thead>
   <tbody>
