--- a/_posts/2024/2024-05-18-哈儿实验室第四届最高苏维埃主席团召开第三十三次全体会议.md
+++ b/_posts/2024/2024-05-18-哈儿实验室第四届最高苏维埃主席团召开第三十三次全体会议.md
@@ -12,8 +12,8 @@ tags:
 ---
 
 &emsp;&emsp;14日至18日，哈儿实验室第四届最高苏维埃主席团召开第三十三次全体会议。会议经表决，通过了若干关于哈儿实验室建设发展工作的哈儿实验室规定，决定设立哈儿实验室安全委员会，并通过了相关人事决定。哈儿实验室最高苏维埃主席团主席**А-8139-21Б**同志主持会议。  
-&emsp;&emsp;会议听取了哈儿实验室生物鉴定部代理部长**С-6775-70Л**同志作的关于生物鉴定部部长**Ч-9488-47Б**同志因工伤而接受疗养的报告，并决定通过该报告。  
-&emsp;&emsp;会议通过了《哈儿实验室种间关系规定》，哈儿实验室最高苏维埃主席团第一副主席**С-1945-08П**同志就此向会议发表讲话。**С-1945-08П**同志表示，决定采用哈儿实验室规定的形式确认哈儿实验室种间关系建设工作的基本原则、指导方针和具体措施，强化哈儿实验室种间关系建设，推动哈儿实验室下辖地区内各物种实现种间关系的和谐发展。  
+&emsp;&emsp;会议听取了哈儿实验室生物鉴定部代理部长**С-6775-70Л**同志作的关于生物鉴定部部长**Ч-9488-47Б**同志因工伤接受疗养的报告，并决定通过该报告。  
+&emsp;&emsp;会议通过了《哈儿实验室种间关系规定》，哈儿实验室最高苏维埃主席团第一副主席**С-1945-08П**同志就此向会议发表讲话。**С-1945-08П**同志表示，决定采用哈儿实验室规定的形式确认哈儿实验室种间关系建设工作的基本原则、指导方针和具体措施，有助于强化哈儿实验室种间关系建设和推动哈儿实验室下辖地区内各物种实现种间关系的和谐发展。  
 &emsp;&emsp;会议还通过了《哈儿实验室安全规定修正案（一）》、《哈儿实验室金属冶炼和电力供应规定》、《哈儿实验室特殊事务工作规定》和《哈儿实验室РУДВ现象研究和防治工作规定》。  
 &emsp;&emsp;会议通过决议，决定设立哈儿实验室安全委员会。会议根据哈儿实验室第四届最高苏维埃代表在2024年3月至5月间递交的哈儿实验室工作人员任命建议和与会代表投票表决结果，决定**ОпенГ-ккмб**同志为哈儿实验室安全委员会主席，**Л-1917-11С**同志为哈儿实验室安全委员会副主席，**Д-2530-60Ю**同志为哈儿实验室安全委员会秘书长。会议通过了哈儿实验室安全委员会其他组成人员名单。  
 &emsp;&emsp;会议决定接受**ОпенГ-ккмб**同志因工作需要辞去部长会议第一副主席。会议决定增补**Ж-6217-15Б**同志为部长会议第一副主席；决定增补**Ю-5282-43Ц**同志为部长会议副主席；决定增补**П-8514-28А**同志为部长会议主席团委员。  
