--- a/_posts/2024/2024-07-27-庭审陷入枪战.md
+++ b/_posts/2024/2024-07-27-庭审陷入枪战.md
@@ -14,7 +14,7 @@ tags:
 &emsp;&emsp;27日下午，哈儿实验室02分部下辖地区第28未命名哈儿聚居区第二马匹市独立人民法院在庭审时发生枪战并致使全市陷入交火，目前伤亡情况暂不明。哈儿实验室已就此采取应对措施恢复秩序，相关责任人已被逮捕。  
 &emsp;&emsp;据第二马匹市内务局27日14时发布的通报，大规模枪战爆发自第二马匹市独立人民法院于当天开庭审理的一起哈儿财产纠纷案。庭审过程中，被告哈儿在原告哈儿出示案件相关证据时突然情绪失控，并使用随身携带的“医用步枪”射杀原告哈儿律师。随后，原告哈儿使用“医用全自动步枪”攻击被告哈儿。位于旁听席的哈儿在双方发生严重冲突后先后加入交火，庭审被迫中断。期间，审判长尝试使用“医用手榴弹”制止双方交火未果，并在向第二马匹市内务局报告相关情况后失联。27日15时许，第二马匹市独立人民法院在交火中发生剧烈爆炸，造成建筑物倒塌，随后大规模枪战蔓延至第二马匹市其他地区。27日16时28分，第二马匹市内务局发布通报，宣布第二马匹市完全陷入枪战，第二马匹市苏维埃、市政府和驻市武装力量已撤离该市。  
 &emsp;&emsp;大规模枪战发生后，哈儿实验室中央决策局议事处常务委员会委员、中央决策局紧急情况委员会委员长、02分部最高苏维埃主席团主席兼军事委员会主席**О-4907-93Н**同志主持召开02分部主要负责同志紧急全体会议。**О-4907-93Н**同志在会议中要求，必须立刻采取强有力措施遏制哈儿使用“医用武器”实施大规模破坏性行为，要尽全力减小此次事件带来的生命和财产损失，严格防止交火外溢至其他地区，并尽快使第二马匹市各哈儿实验室组织恢复正常工作。  
-&emsp;&emsp;27日17时30分左右，哈儿实验室内务部副部长**Б-7418-65В**同志抵达第二马匹市周边地区，观看了大规模枪战的情况，并在交火区域附近的掩体中同第二马匹市主要负责同志谈话。**Б-7418-65В**同志指出，对“医用武器”的滥用和第二马匹市有关负责同志的临阵脱逃是造成此次事件的根本原因。第二马匹市有关负责同志要用于承担责任，克服恐惧心理，立刻采取严厉措施恢复第二马匹市正常秩序，并确保此类事件不再发生。  
+&emsp;&emsp;27日17时30分左右，哈儿实验室内务部副部长**Б-7418-65В**同志抵达第二马匹市周边地区，观看了大规模枪战的情况，并在交火区域附近的掩体中同第二马匹市主要负责同志谈话。**Б-7418-65В**同志指出，对“医用武器”的滥用和第二马匹市有关负责同志的临阵脱逃是造成此次事件的根本原因。第二马匹市有关负责同志要勇于承担责任，克服恐惧心理，立刻采取严厉措施恢复第二马匹市正常秩序，并确保此类事件不再发生。  
 &emsp;&emsp;27日18时许，哈儿实验室部长会议主席团委员兼内务部部长**М-5194-82Т**同志抵达第二马匹市周边地区，详细了解了大规模枪战的具体情况，并责令第二马匹市副市长、内务局局长**Н-6917-69И**率市内务局工作人员从第二马匹市东郊攻入城市以夺回第二马匹市各哈儿实验室组织驻地。18时28分，**Н-6917-69И**自行中断与哈儿实验室内务部的联系并以第二马匹市内务局全体工作人员的名义向三名持有“医用全自动步枪”的普通哈儿投降。19时，第二马匹市苏维埃主席、普通哈儿苦味羊角根据**М-5194-82Т**同志一行的建议，在第二马匹市周边地区某地下战壕内主持召开第二马匹市苏维埃主席团紧急全体会议，决定免去**Н-6917-69И**的第二马匹市政府副市长、内务局局长职务，委任第二马匹市市长**Х-4955-58Ц**同志为内务局代理局长，并罢免**Н-6917-69И**的第二马匹市苏维埃代表职务。随后，**М-5194-82Т**同志签署命令，决定暂停**Н-6917-69И**的哈儿实验室工作人员资格并批准对其采取强制措施。  
 &emsp;&emsp;27日19时，哈儿实验室武装内务部队自第二马匹市南部攻入第二马匹市，通过在全市范围内使用“医用武器”的方法恢复第二马匹市正常秩序。19时46分，**Н-6917-69И**被哈儿实验室武装内务部队采取强制措施。20时，第二马匹市内的枪战基本平息，第二马匹市各哈儿实验室组织逐步回到其驻地恢复工作。  
 &emsp;&emsp;27日20时30分，**М-5194-82Т**同志在第二马匹市政府废建筑物墟前的空地上主持召开第二马匹市主要负责同志全体会议。**М-5194-82Т**同志指出，以**Н-6917-69И**为代表的少部分哈儿实验室工作人员的渎职是此次大规模枪战爆发的根本原因。第二马匹市要深刻吸取此次事件的惨痛教训，加强对“医用武器”的管制，明确禁止任何生物以身体健康不良为由将“医用武器”带入禁枪场所，在无医嘱证明的情况下不得随意向生物销售“医用武器”。第二马匹市主要负责同志要勇于作为、敢于担责，切忌临阵脱逃、玩忽职守。  
