添加一条消息
rt

--- a/_posts/2024/2024-07-27-哈儿实验室第四届最高苏维埃主席团召开第三十四次全体会议.md
+++ b/_posts/2024/2024-07-27-哈儿实验室第四届最高苏维埃主席团召开第三十四次全体会议.md
@@ -15,7 +15,7 @@ tags:
 &emsp;&emsp;会议听取并审议了哈儿实验室部长会议主席团委员兼秘书长**И-3484-09Я**同志受哈儿实验室部长会议委托作的关于提请审议批准哈儿实验室部长会议关于执行《哈儿实验室最高苏维埃关于在哈儿实验室部长会议组成部门间建立跨部门协调机制的决定》的具体实施方案的说明，并决定通过相关决议。  
 &emsp;&emsp;会议听取并审议了哈儿实验室管制实验部副部长**З-9419-95Т**同志受哈儿实验室部长会议委托作的关于提请审议批准设立炼钢党事务跨部门协调机制的说明，并决定通过相关决议。  
 &emsp;&emsp;会议听取并审议了哈儿实验室卫生部部长**Я-9726-98О**同志受哈儿实验室部长会议委托作的关于提请审议批准设立医疗事务跨部门协调机制和推广应用非人类人形生物医疗器械的说明，并决定通过相关决议。  
-&emsp;&emsp;会议听取并审议了哈儿实验室工业和能源部部长**Ё-1089-60Щ**同志受哈儿实验室部长会议委托作的关于提请审议批准建设人类-哈儿能源协同供应体系的说明和危险哈儿团[炼钢党](https://khayer.cn/bdohlh/index.html?haer=19)高级领导哈儿莼恭绫作的关于炼钢党金属冶炼和电力供应服务能力的报告，并决定通过相关决议。  
+&emsp;&emsp;会议听取并审议了哈儿实验室工业和能源部部长**Ё-1089-60Щ**同志受哈儿实验室部长会议委托作的关于提请审议批准建设人类-哈儿能源协同供应体系的说明和危险哈儿团[炼钢党](../../../../bdohlh/index.html?haer=19)高级领导哈儿莼恭绫作的关于炼钢党金属冶炼和电力供应服务能力的报告，并决定通过相关决议。  
 &emsp;&emsp;会议决定任免哈儿实验室部长会议组成部门负责同志。会议经表决，决定免去**Н-3061-62Ф**同志的紧急情况部部长职务，任命**Н-7469-37У**同志为紧急情况部部长。  
 &emsp;&emsp;27日上午，**А-8139-21Б**同志主持召开闭幕会，并根据会议审议通过的决议签署了相关命令，新任命的哈儿实验室工作人员宣誓就职。闭幕会上，哈儿实验室部长会议副主席兼管制实验部部长**Л-9218-73З**同志就人类-哈儿社会的构建工作和人类-哈儿全方位协同体系的建设情况作了讲话。  
 &emsp;&emsp;会议还研究了其他事项。哈儿实验室最高苏维埃、管制实验部、卫生部、工业和能源部的有关负责同志参加会议。
