--- a/_posts/2024/2024-03-17-哈儿的鉴别方法.md
+++ b/_posts/2024/2024-03-17-哈儿的鉴别方法.md
@@ -62,7 +62,7 @@ tags:
 
 &emsp;&emsp;以上是一些常见类型的哈儿的主要特征及性质。需要认识到，并非所有带来危险的生物都是哈儿。在遭遇危险情况时，如果无法辨认危险来源的类型，应当联系哈儿实验室部长会议主席团秘书处；如果能够确定危险来源的类型，可以直接联系有关部门。无论遇到何种危险情况，均应尽全力确保自身安全，不得试图同危险来源搏斗或交流。在情况允许时，应尽快联系哈儿实验室以寻求紧急救助。哈儿实验室将尽可能提供保护，并将您的损失最小化。
 
-**【注】**<sup>1</sup>&ensp;本文作者**Г-1614-14Ж**同志长期从事哈儿鉴定工作，曾获“哈儿鉴定首席专家”称号。**Г-1614-14Ж**同志现任哈儿实验室部长会议主席团副秘书长。  
+**【注】**<sup>1</sup>&ensp;本文作者**Г-1614-14Ж**同志长期从事哈儿鉴定工作，曾获“哈儿鉴定首席专家”称号。**Г-1614-14Ж**同志现任哈儿实验室部长会议主席团副秘书长、部长会议机关决策组副主任。  
 &emsp;&emsp;&emsp;<sup>2</sup>&ensp;参见《初等普通哈儿学（一）》。  
 &emsp;&emsp;&emsp;<sup>3</sup>&ensp;截至2024年3月1日，在所有已报告的提季提孩子哈人事件中，没有非哈儿实验室工作人员的人类生还的记录。  
 &emsp;&emsp;&emsp;<sup>4</sup>&ensp;数据来自哈儿实验室管制实验部危险哈儿司。下同。  
