--- a/_posts/2024/2024-09-21-РУДВ现象补充观测数据（二）.md
+++ b/_posts/2024/2024-09-21-РУДВ现象补充观测数据（二）.md
@@ -11,7 +11,7 @@ tags:
   - 紧急救助
 ---
 
-<div style="text-align: center"><h1>РУДВ现象补充观测数据（一）</h1></div>
+<div style="text-align: center"><h1>РУДВ现象补充观测数据（二）</h1></div>
 <div style="text-align: center">РУДВ现象研究院六局<br>（2024年9月18日至21日）</div>
 
 ### 一、引言
