--- a/_posts/2024/2024-09-21-РУДВ现象补充观测数据（二）.md
+++ b/_posts/2024/2024-09-21-РУДВ现象补充观测数据（二）.md
@@ -486,7 +486,7 @@ tags:
       <td>11:25:05</td>
       <td>11:26:10</td>
       <td>65s</td>
-      <td rowspan="2">生效器件受切向往复摩擦</td>
+      <td rowspan="2" style="vertical-align: middle;">生效器件受切向往复摩擦</td>
     </tr>
     <tr>
       <td>11:27:12</td>
