--- a/_posts/2025/2025-01-05-哈儿实验室第四届最高苏维埃主席团召开第三十五次全体会议.md
+++ b/_posts/2025/2025-01-05-哈儿实验室第四届最高苏维埃主席团召开第三十五次全体会议.md
@@ -11,7 +11,7 @@ tags:
   - 消息
 ---
 
-&emsp;&emsp;2日至5日，哈儿实验室第四届最高苏维埃主席团召开第三十五次全体会议。会议经表决，决定改组哈儿实验室安全委员会，决定广泛开展人类定义及界定标准的意见收集工作，通过了《哈儿实验室医疗事务规定（暂行）》，决定动议召开最高苏维埃全体会议，并通过了有关任免案。哈儿实验室最高苏维埃主席团主席**А-8139-21Б**同志主持会议。  
+&emsp;&emsp;2日至5日，哈儿实验室第四届最高苏维埃主席团召开第三十五次全体会议。会议经表决，决定改组哈儿实验室安全委员会，决定广泛开展人类定义及界定标准的意见收集工作，通过了哈儿实验室医疗事务暂行规定，决定动议召开最高苏维埃全体会议，并通过了有关任免案。哈儿实验室最高苏维埃主席团主席**А-8139-21Б**同志主持会议。  
 &emsp;&emsp;会议听取并审议了哈儿实验室安全委员会委员兼秘书长**Д-2530-60Ю**同志作的哈儿实验室安全委员会工作报告和关于提请审议改组哈儿实验室安全委员会的议案的说明。会议经表决，通过了哈儿实验室安全委员会工作报告，并决定基于现实情况适当改组哈儿实验室安全委员会。  
 &emsp;&emsp;会议听取并审议了哈儿实验室生物鉴定部副部长**Ц-7437-47В**同志作的生物鉴定部在人类定义和界定标准修正工作中获得的实验结果的报告，关于提请批准在哈儿实验室下辖地区内广泛开展人类定义及界定标准的意见收集工作的说明和人类界定规定草案起草情况的报告。会议经表决，通过了上述报告和议案。  
 &emsp;&emsp;会议听取并审议了哈儿实验室卫生部副部长**Ч-9488-47Б**同志作的哈儿实验室武装医疗工作的有关报告和关于提请审议哈儿实验室医疗事务暂行规定草案的说明。会议经表决，通过了上述报告和议案。  
