添加两条消息
rt

--- a/_posts/2024/2024-03-16-被哈儿追杀怎么办？教你四招解决.md
+++ b/_posts/2024/2024-03-16-被哈儿追杀怎么办？教你四招解决.md
@@ -49,7 +49,7 @@ tags:
 &emsp;&emsp;以上四种方法是哈儿实验室工作人员基于经验总结出的应对哈人事件的基本方法，通常能够满足日常需要。但需要注意的是，这四种方法通常仅对普通哈儿实施的哈人事件有效。对于危险哈儿实施的哈人事件，需要采用其他方法应对。需要强调的是，**严禁对人类实施主动行为刺激法和“医用武器”法**，否则您将面临被起诉或被销毁的风险。  
 &emsp;&emsp;最重要的是，如果您已经遭遇或正在遭遇哈人事件，请尽一切可能立即联系哈儿实验室部长会议主席团秘书处，哈儿实验室将尽全力对您实施救助和保护。
 
-**【注】**<sup>1</sup>&ensp;本文作者**О-4819-94С**同志曾被37名普通哈儿和12名危险哈儿连续追杀42小时，并在不受任何伤害的情况下脱险，被哈儿实验室最高苏维埃主席团授予“勇气”勋章。**О-4819-94С**同志现任哈儿实验室管制实验部普通哈儿司副司长。  
+**【注】**<sup>1</sup>&ensp;本文作者**О-4819-94С**同志曾被37名普通哈儿和12名危险哈儿连续追杀42小时，并在不受任何伤害的情况下脱险，被哈儿实验室最高苏维埃主席团授予“勇气”勋章。  
 &emsp;&emsp;&emsp;<sup>2</sup>&ensp;实验数据由哈儿实验室管制实验部提供。参见《哈人事件研究（三）》。下同。  
 &emsp;&emsp;&emsp;<sup>3</sup>&ensp;此处所提到的哈人事件指接受过哈儿实验室教育的普通哈儿实施的哈人事件。
 <div style="text-align: right">（来自：哈儿实验室管制实验部）</div>
