--- a/_posts/2025/2025-03-30-哈儿实验室人事调动.md
+++ b/_posts/2025/2025-03-30-哈儿实验室人事调动.md
@@ -11,7 +11,7 @@ tags:
   - 消息
 ---
 
-&emsp;&emsp;30日，哈儿实验室第一届议事会第三次会议补选智慧肚皮（非人生物）为哈儿实验室议事委员，现公布简历如下。
+&emsp;&emsp;30日，哈儿实验室第一届决策委第三次全体会议补选智慧肚皮（非人生物）为哈儿实验室议事委员，现公布简历如下。
 
 ![智慧肚皮同志像](../../../../img/msgimg/2025_03_30-1.jpg)
 
