--- a/_posts/2025/2025-04-30-神圣的言语：神圣的言语：文明发展的减速带.md
+++ b/_posts/2025/2025-04-30-神圣的言语：神圣的言语：文明发展的减速带.md
@@ -14,7 +14,7 @@ tags:
 <div style="text-align: center">（一）</div>
 
 &emsp;&emsp;圣人说：“我喜欢日狗。”我不懂他的道理。每当听到这奇怪的话语，我就会发出疑惑的狗叫。但圣人的力量是如此之大，以致我在被他按倒时无法挣脱。  
-&emsp;&emsp;“我是一条狗，”圣人终于站起身来，满意地说。我不明白圣人的思想，也不明白圣人言行。  
+&emsp;&emsp;“我是一条狗，”圣人终于站起身来，满意地说。我不明白圣人的思想，也不明白圣人的言行。  
 &emsp;&emsp;“眼睛是心灵的窗户，而肠胃是心灵的钥匙，因为肠道内的菌群可以影响我们的情绪，”我说，“我想表达的是，现在，我心灵的钥匙有一些不舒服。”圣人说：“准确地讲，不舒服的不是你心灵的钥匙，而是你心灵的钥匙孔。”  
 &emsp;&emsp;“这并不正确，”我说，“钥匙孔被设计出时，便是用来迎接钥匙进入的，不容易被钥匙损伤。从设计原理和使用后果上讲，这不是心灵的钥匙孔。”圣人说：“你的言语有一些道理，但我认为这仍然是错误的。我们拧动钥匙，门便开了；同样地，我们的心灵之门也是这样开启的。”  
 &emsp;&emsp;我和圣人争辩不休，直到智者推开门，向我们走来。他并不说话，只是将我和圣人捆在柱子上。我知道，圣人很快就会同意我的说法了。
@@ -44,5 +44,5 @@ tags:
 <div style="text-align: center">（四）</div>
 
 &emsp;&emsp;我醒来，并未看见满地的血肉。我身处同圣人被捆在柱子上的那个房屋中，角落里有一个与我面貌相同的人，疑惑地看着我。我拿起桌上的镜子，照向自己，镜子里浮现出圣人的模样。  
-&emsp;&emsp;我无法抑制内心的狂喜，立刻看向角落里的那个人，对他说：“我喜欢日狗。”
+&emsp;&emsp;我无法抑制内心的狂喜，立刻走向角落里的那个人，对他说：“我喜欢日狗。”
 <div style="text-align: right">（来自：哈儿实验室管制实验部）</div>
