--- a/_posts/2025/2025-06-10-哈儿实验室人事调动.md
+++ b/_posts/2025/2025-06-10-哈儿实验室人事调动.md
@@ -12,8 +12,8 @@ tags:
 ---
 
 &emsp;&emsp;10日，哈儿实验室决策委决定调整哈儿实验室部分一级分部主要负责同志：  
-&emsp;&emsp;**О-8580-25А**同志任01分部决策委员会委员、常务委员会委员、主任，**Ф-9182-00Л**同志不再担任01分部决策委员会主任、常务委员会委员、委员职务。  
-&emsp;&emsp;**Л-5783-20Ф**同志任03分部决策委员会主任，**Ч-4549-02Ш**同志不再担任03分部决策委员会主任、常务委员会委员、委员职务。
+&emsp;&emsp;**О-8580-25А**同志任01分部决策委员会委员、常务委员会委员、主任，**Ф-9182-00Л**同志不再兼任01分部决策委员会主任、常务委员会委员、委员职务。  
+&emsp;&emsp;**Л-5783-20Ф**同志任03分部决策委员会主任，**Ч-4549-02Ш**同志不再兼任03分部决策委员会主任、常务委员会委员、委员职务。
 
 &emsp;&emsp;10日，哈儿实验室部长会议主要负责同志签署命令，决定进行人事任免。  
 &emsp;&emsp;命令决定，免去**Ч-9488-47Б**同志的卫生部副部长职务。
