--- a/_posts/2024/2024-07-11-哈儿实验室最高苏维埃主席团举行授予牛衔仪式.md
+++ b/_posts/2024/2024-07-11-哈儿实验室最高苏维埃主席团举行授予牛衔仪式.md
@@ -13,7 +13,7 @@ tags:
 
 &emsp;&emsp;11日，哈儿实验室最高苏维埃主席团举行牛衔授予仪式，向对良性人畜杂交活动做出重大贡献的人形生物授予牛衔。哈儿实验室最高苏维埃主席团主席**А-8139-21Б**同志出席仪式并亲自向人型生物代表授予牛衔。哈儿实验室最高苏维埃主席团第一副主席**С-1945-08П**同志主持仪式。  
 &emsp;&emsp;**С-1945-08П**同志向大会宣读了《哈儿实验室最高苏维埃主席团关于设立牛衔制度并授予牛衔的决定》，**А-8139-21Б**同志作了重要讲话。**А-8139-21Б**同志指出，第一届国际生物身体组织交易和良性人畜杂交大会即将开幕，哈儿实验室高度重视相关种间关系协调工作。设立牛衔制度有助于激发人形生物推动良性人畜杂交活动健康发展的热情，对哈儿实验室下辖地区内各项建设工作具有重要意义。要进一步发扬良性人畜杂交精神，为人类-哈儿社会的建立和发展做出贡献。  
-&emsp;&emsp;哈儿实验室最高苏维埃主席团副主席、最高苏维埃牛衔评定和授予工作委员会副主任委员、普通哈儿羊角锤就牛衔制度和牛衔授予的具体实施办法作了说明。羊角锤介绍，牛衔制度共分五等十七级，包括普通牛等级、黑牛等级、野牛等级、牛魔等级和牛魔王等级。普通牛等级包括痛苦小牛、优质牛；黑牛等级包括三级黑牛、二级黑牛、一级黑牛、特级黑牛；野牛等级包括三级野牛、二级野牛、一级野牛、特技野牛；牛魔等级包括三级牛魔、二级牛魔、一级牛魔、特级牛魔；牛魔王等级包括准牛魔王、牛魔王、最大牛魔王。根据人形生物对人畜杂交活动做出贡献的程度，哈儿实验室最高苏维埃牛衔评定和授予工作委员会根据事实情况合理授予牛衔，并向获授牛衔的生物颁发牛衔证书。  
+&emsp;&emsp;哈儿实验室最高苏维埃主席团副主席、最高苏维埃牛衔评定和授予工作委员会副主任委员、普通哈儿羊角锤就牛衔制度和牛衔授予的具体实施办法作了说明。羊角锤介绍，牛衔制度共分五等十七级，包括普通牛等级、黑牛等级、野牛等级、牛魔等级和牛魔王等级。普通牛等级包括痛苦小牛、优质牛；黑牛等级包括三级黑牛、二级黑牛、一级黑牛、特级黑牛；野牛等级包括三级野牛、二级野牛、一级野牛、特级野牛；牛魔等级包括三级牛魔、二级牛魔、一级牛魔、特级牛魔；牛魔王等级包括准牛魔王、牛魔王、最大牛魔王。根据人形生物对人畜杂交活动做出贡献的程度，哈儿实验室最高苏维埃牛衔评定和授予工作委员会根据事实情况合理授予牛衔，并向获授牛衔的生物颁发牛衔证书。  
 &emsp;&emsp;**А-8139-21Б**同志向出席仪式的人形生物代表授予牛衔，并向其表示祝贺。获授最大牛魔王牛衔的国际人畜杂交爱好者联合会长官兼常务理事会主席、ШИЯЧ分配室生物龙图者向全体与会生物发表了感言。  
 &emsp;&emsp;牛衔授予仪式结束后，出席仪式的哈儿实验室部长会议副主席**Ю-5282-43Ц**同志同获授牛魔王等级牛衔的人形生物代表合影留念。  
 &emsp;&emsp;哈儿实验室最高苏维埃主席团、部长会议主席团秘书处、管制实验部、内务部、生物鉴定部、06分部和种间关系局有关负责同志参加仪式。国际人畜杂交爱好者联合会常务理事会有关负责生物列席仪式。
