--- a/_posts/2025/2025-06-25-哈儿实验室最高苏维埃召开全体会议.md
+++ b/_posts/2025/2025-06-25-哈儿实验室最高苏维埃召开全体会议.md
@@ -15,7 +15,7 @@ tags:
 &emsp;&emsp;会议审议了哈儿实验室安全规定修正案草案，哈儿实验室部长会议主席团委员、内务部部长**М-5194-82Т**同志就此向会议作了说明。会议表决通过该议案。  
 &emsp;&emsp;会议审议了哈儿实验室部长会议机构改革方案，哈儿实验室部长会议主席团委员兼秘书长**Ч-9488-47Б**同志就此向会议作了说明。会议经表决，决定组建文化部，管制实验部、内务部、社会行政部有关组织职能相应调整；决定任命**З-9419-95Т**同志为文化部部长。  
 &emsp;&emsp;会议还审议了哈儿实验室章程修正案草案和人类定义及界定标准草案，哈儿实验室部长会议副主席**Ю-5282-43Ц**同志和生物鉴定部部长**С-6775-70Л**同志分别就上述两个议案向会议作了说明。  
-&emsp;&emsp;会议审议了有关任免案。会议经表决，决定**Л-1917-11С**同志为最高苏维埃主席团主席；决定**Ф-9182-00Л**同志为部长会议主席。  
+&emsp;&emsp;会议选举了哈儿实验室最高苏维埃和部长会议主要负责同志。经选举，**Л-1917-11С**同志当选为最高苏维埃主席团主席；**Ф-9182-00Л**同志当选为部长会议主席。  
 &emsp;&emsp;25日，会议宣布休会，决定在适时举行第二阶段会议。哈儿实验室常务主席**А-8139-21Б**同志根据会议通过的决议签署有关命令，新任命的哈儿实验室工作人员宣誓就职。会后，新任命的哈儿实验室文化部主要负责同志出席了相应部门的成立仪式。  
 &emsp;&emsp;哈儿实验室中央决策委员会、安全委员会和部长会议有关负责同志列席会议。
 <div style="text-align: right">（来自：《真理》2025年6月25日）</div>
