--- a/_posts/2025/2025-07-05-英俊哈儿大赛开幕.md
+++ b/_posts/2025/2025-07-05-英俊哈儿大赛开幕.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "英俊哈儿大赛开幕"
-subtitle:   "Открытие конкурса красавчиков хаеров"
+subtitle:   "Открытие конкурса красивых хаеров"
 date:       2025-07-05 15:00:00
 author:     "哈儿实验室文化部"
 catalog: false
