--- a/_posts/2025/2025-07-22-公告.md
+++ b/_posts/2025/2025-07-22-公告.md
@@ -5,7 +5,7 @@ subtitle:   "УВЕДОМЛЕНИЕ"
 date:       2025-07-22 14:30:00
 author:     "哈儿实验室部长会议网站运营管理委员会"
 catalog: false
-header-img: "img/about-bg.jpg"
+header-img: "img/yu1.jpg"
 header-mask: 0
 tags:
   - 通知
