--- a/_posts/2025/2025-08-04-神圣的言语：辉煌的文明.md
+++ b/_posts/2025/2025-08-04-神圣的言语：辉煌的文明.md
@@ -46,9 +46,10 @@ tags:
 &emsp;&emsp;但这一切已经不重要了。我们经过的城市一座接一座爆炸，这个星球已不再是人间乐土。人的残骸就像野草一样铺满广袤的大地，黑暗中我们无从下脚，一切都在拖慢我们前行的速度。直到旭日东升，我们也没能找到栖身之所。  
 &emsp;&emsp;太阳再次沉入地平线，我们早已筋疲力尽。数不清有多少城市爆炸了，但我们清楚，经过的城市里没有一座安然无恙。  
 &emsp;&emsp;我们踢开地上的人尸，腾出一块地方来，在湿漉漉的地面上颓然坐下。  
-&emsp;&emsp;实在是荒谬极了。  
+&emsp;&emsp;实在荒谬极了。  
 &emsp;&emsp;沉默许久，我说：“我们四周皆是粪便，我确信我们不能逃离。”智者说：“是啊。你看，人类文明的巨人一边前行，就一边排便。来时路已经铺满了粪便，我们无法回头。”  
 &emsp;&emsp;我仍想让气氛轻松一些：“人类文明的巨人，就是要不断猛吸粪便，才能保持清醒，不断前进。”智者笑着说：“看来，这些粪便，的确不是我们能承受的。”  
 &emsp;&emsp;最后一丝余晖也已被黑暗抹去，我们与四周合为一体，大地开始隆隆震动。  
-&emsp;&emsp;“哈哈，这巨人就要一个猛子扎进粪堆里去了。”
+&emsp;&emsp;“这巨人就要一个猛子扎进粪堆里去了。”  
+&emsp;&emsp;“哈哈！”
 <div style="text-align: right">（来自：哈儿实验室文化部）</div>
