--- a/_posts/2025/2025-08-10-公告.md
+++ b/_posts/2025/2025-08-10-公告.md
@@ -11,7 +11,7 @@ tags:
   - 通知
 ---
 
-&emsp;&emsp;哈儿实验室最高苏维埃日前[通过决议](../../../../%E5%93%88%E5%84%BF%E5%AE%9E%E9%AA%8C%E5%AE%A4%E6%9C%80%E9%AB%98%E8%8B%8F%E7%BB%B4%E5%9F%83%E5%8F%AC%E5%BC%80%E5%85%A8%E4%BD%93%E4%BC%9A%E8%AE%AE/)，决定批准开设英俊哈儿交易所，并授权国际人畜杂交爱好者联合会成立有关组织全权监督英俊哈儿交易工作。  
+&emsp;&emsp;哈儿实验室最高苏维埃日前[通过决议](../../../../2025/08/09/%E5%93%88%E5%84%BF%E5%AE%9E%E9%AA%8C%E5%AE%A4%E6%9C%80%E9%AB%98%E8%8B%8F%E7%BB%B4%E5%9F%83%E5%8F%AC%E5%BC%80%E5%85%A8%E4%BD%93%E4%BC%9A%E8%AE%AE/)，决定批准开设英俊哈儿交易所，并授权国际人畜杂交爱好者联合会成立有关组织全权监督英俊哈儿交易工作。  
 &emsp;&emsp;为更好保障英俊哈儿交易所有关工作正常开展，哈儿实验室部长会议经研究决定面向全体非哈儿实验室工作人员的人类聘请一批英俊哈儿研究领域专业人士担任哈儿实验室部长会议外部顾问。哈儿实验室部长会议外部顾问任期4年，享受哈儿实验室部长会议参事待遇，归属哈儿实验室部长会议参事室管理。经哈儿实验室部长会议主席团批准，任期已满的外部顾问原则上可无限制延长聘期。本次聘请的外部顾问全部纳入英俊哈儿研究事业参与者范畴，可向哈儿实验室工作人员部申请英俊哈儿研究工作参与者有关补助。  
 &emsp;&emsp;哈儿实验室下辖地区内的每名人类可在2025年8月31日前向哈儿实验室部长会议秘书处提名3名外部顾问建议人选。哈儿实验室部长会议秘书处和参事室将组织有关工作人员成立评审小组，确定拟聘任外部顾问的名单并予公示。公示结束后，哈儿实验室部长会议将正式聘任公示通过人选为外部顾问并颁发聘书。  
 &emsp;&emsp;本通知有关的其他问题请致函哈儿实验室部长会议秘书处询问，哈儿实验室部长会议秘书处将在3个工作日内予以答复。
