--- a/_posts/2025/2025-12-12-“长人仪式”引发严重事故.md
+++ b/_posts/2025/2025-12-12-“长人仪式”引发严重事故.md
@@ -11,6 +11,6 @@ tags:
   - 消息
 ---
 
-&emsp;&emsp;12日，哈儿实验室04分部（驻地）有关组织在实验性进行“长人仪式”时遭遇严重事故，造成04分部（驻地）多名工作人员伤亡和失联。根据哈儿实验室04分部决策委员会的指派，04分部（驻地）有关负责人已赴事故现场察看情况并指导应急处置工作。  
-&emsp;&emsp;“长人仪式”是哈儿实验室04分部为进一步研究驻地内特定自然现象而开展的大型实验项目，于2024年6月立项并开始前期建设工作。2025年11月27日，经哈儿实验室04分部决策委员会批准，04分部（驻地）有关组织正式开始执行预定实验计划并连续成功完成多项重要实验，直至本次事故发生。
+&emsp;&emsp;12日，哈儿实验室04分部（辖区）有关组织在实验性进行“长人仪式”时遭遇严重事故，造成04分部（辖区）多名工作人员伤亡和失联。根据哈儿实验室04分部决策委员会的指派，04分部（辖区）有关负责人已赴事故现场察看情况并指导应急处置工作。  
+&emsp;&emsp;“长人仪式”是哈儿实验室04分部为进一步研究其下辖地区内特定自然现象而开展的大型实验项目，于2024年6月立项并开始前期建设工作。2025年11月27日，经哈儿实验室04分部决策委员会批准，04分部（辖区）有关组织正式开始执行预定实验计划并连续成功完成多项重要实验，直至本次事故发生。
 <div style="text-align: right">（来自：《真理》2025年12月12日）</div>
